refactor: add getLest of conversion in currency-service